# fastapi-sse

./: .gitignore  Dockerfile  README.md  flake.nix  main.py  pyproject.toml  renovate.json  renovate.json5
.github/workflows/: publish-image.yaml
fastapi_sse/: main.py
templates/: index.html
