[project]
name = "fastapi-sse"
version = "0.3.2"
description = "Testing Server-sent events on FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
